# Lab1-sem2

./: CMakeLists.txt  FileFillingFunctions.c  FileFillingFunctions.h  FileOutputFunctions.c  FileOutputFunctions.h  Functions.c  Functions.h  Tasks.c  Tasks.h  main.c
